# probably-average-computer-emulator-32

./: CMakeLists.txt
.github/workflows/: build.yml
ci/: .config  build-seabios.sh
core/: ATAController.cpp  ATAController.h  CPU.cpp  CPU.h  Floppy.h  FloppyController.cpp  FloppyController.h  Scancode.h  System.cpp  System.h  VGACard.cpp  VGACard.h
minsdl/: DiskIO.cpp  DiskIO.h  Main.cpp
pico-shared/: BIOS.h  CMakeLists.txt  DiskIO.cpp  DiskIO.h  Storage.cpp  USBHID.cpp  tusb_config.h
pico2/: Audio.h  Audio_i2s.cpp  Audio_none.cpp  CMakeLists.txt  Display.h  Display_commands.h  Display_dpi.cpp  Display_hstx.cpp  Main.cpp  Palette.h  clock.pio  config.h  dpi.pio  i2s.pio  psram.c
